--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
+    "@babel/runtime": "^7.6.3",
     "bootstrap": "4.3.1",
     "jquery": "3.4.1",
     "node-sass": "4.12.0",
@@ -16,7 +17,11 @@
   },
   "devDependencies": {
     "@babel/core": "7.2.0",
-    "parcel-bundler": "^1.6.1"
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "parcel-bundler": "^1.6.1",
+    "sass": "^1.23.0"
   },
   "keywords": []
 }
