--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@babel/runtime": "^7.6.3",
     "bootstrap": "4.3.1",
+    "data-stoar": "^2.2.2",
     "jquery": "3.4.1",
+    "mainstay": "^3.0.1",
     "node-sass": "4.12.0",
     "reset.css": "2.0.2",
     "stickyfilljs": "2.1.0"
